--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -4,9 +4,9 @@
     font-style: normal;
     align-self: start;
     margin: 0;
-    margin-bottom: 30px;
+    margin-top: 30px;
   }
 
-  .two-columns__paragraph:nth-of-type(3n){
-    margin-bottom: 0;
+  .two-columns__paragraph:first-of-type{
+    margin-top: 0;
   }
